--- a/style.css
+++ b/style.css
@@ -58,15 +58,15 @@ header {
     width: 40px;
     margin-right: 60px;
 }
-
 .cart {
-
+    width: 28px;
+    height: 30px;
 }
 
 .badge {
     background-color: #FFFFFF;
     margin-top: -10px;
-    border-radius: 50%;
+    border-radius: 25px;
     color: #FFFFFF;
     font-size: 10px;
     padding: 2px 5px;
@@ -112,8 +112,6 @@ main {
 .small-photos img {
     width: 120px;
     height: 120px;
-    background-size: cover;
-    background-repeat: no-repeat;
 }
 
 .small-photos div {
@@ -129,10 +127,23 @@ main {
 
 .photo1 {
     border: 2px solid #ff7d1a;
+    background-color: #FFFFFF;
 }
 
 .photo1 img {
     opacity: 0.3;
+}
+
+.photo2 {
+    background-color: #FFFFFF;
+}
+
+.photo3 {
+    background-color: #FFFFFF;
+}
+
+.photo4 {
+    background-color: #FFFFFF;
 }
 
 .infos {
@@ -271,12 +282,137 @@ h1 {
     z-index: 1;
 }
 
-.pupup-container {
+.popup-container {
     display: none;
     position: fixed;
     top: 135px;
     margin: 0 345px;
     width: 750px;
-    background-color: white;
     z-index: 2;
+}
+
+.close {
+    display: flex;
+    justify-content: end;
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+
+.close img {
+    width: 28px;
+    height: 30px;
+}
+
+.close:hover {
+    cursor: pointer;
+}
+
+.slider {
+    display: flex;
+    align-items: center;
+    margin-bottom: 50px;
+}
+
+.left-button {
+    width: 60px;
+    height: 60px;
+    background-color: #FFFFFF;
+    border-radius: 50%;
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: -30px;
+    z-index: 3;
+}
+
+.left-button:hover {
+    cursor: pointer;
+}
+
+.right-button:hover {
+    cursor: pointer;
+}
+
+.right-button {
+    width: 60px;
+    height: 60px;
+    background-color: #FFFFFF;
+    border-radius: 50%;
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: -30px;
+    z-index: 3;
+}
+
+.frame {
+    width: 700px;
+    height: 700px;
+    overflow: hidden;
+    border-radius: 25px;
+}
+
+.slide {
+    width: 2800px;
+    height: 700px;
+    display: flex;
+}
+
+.slide div {
+    width: 700px;
+    height: 700px;
+    background-size: cover;
+}
+
+.slide1 {
+    background-image: url(images/image-product-1.jpg);
+}
+
+.slide2 {
+    background-image: url(images/image-product-2.jpg);
+}
+
+.slide3 {
+    background-image: url(images/image-product-3.jpg);
+}
+
+.slide4 {
+    background-image: url(images/image-product-4.jpg);
+}
+
+.popup-small-photos {
+    display: flex;
+    justify-content: space-between;
+    width: 575px;
+    margin: 0 auto;
+}
+
+.popup-small-photos img {
+    width: 120px;
+    height: 120px;
+}
+
+.popup-small-photos div {
+    width: 120px;
+    height: 120px;
+    border-radius: 10%;
+    overflow: hidden;
+}
+
+.popup-photo1 {
+    background-color: #FFFFFF;
+}
+
+.popup-photo2 {
+    background-color: #FFFFFF;
+}
+
+.popup-photo3 {
+    background-color: #FFFFFF;
+}
+
+.popup-photo4 {
+    background-color: #FFFFFF;
 }
