--- a/style.css
+++ b/style.css
@@ -432,3 +432,303 @@ h1 {
 .popup-photo4 {
     background-color: #FFFFFF;
 }
+
+.mobile {
+    display: none;
+    width: 100vw;
+    height: 100vh;
+}
+
+
+@media only screen and (max-width: 600px) {
+    .container {
+        display: none;
+    }
+    .mobile {
+        display: block;
+    }
+  }
+
+.mob-header {
+    position: fixed;
+    width: 100vw;
+    background-color: #FFFFFF;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 25px;
+}
+
+.mob-menu {
+    margin-right: 10px;
+}
+
+.mob-right {
+    display: flex;
+    align-items: center;
+}
+
+.mob-badge {
+    background-color: #FFFFFF;
+    margin-top: -20px;
+    border-radius: 25px;
+    color: #FFFFFF;
+    font-size: 10px;
+    padding: 2px 5px;
+    margin-right: 25px;
+}
+
+.mob-profile {
+    width: 25px;
+    height: 25px;
+    background-image: url(images/image-avatar.png);
+    background-size: cover;
+}
+
+.mob-shadow {
+    width: 100vw;
+    height: 100vh;
+    display: none;
+    position: fixed;
+    background-color: #000000;
+    opacity: 0.7;
+    z-index: 4;
+}
+
+.mob-side-bar {
+    width: 70vw;
+    height: 100vh;
+    margin-left: -70vw;
+    padding: 25px;
+    position: fixed;
+    background-color: #FFFFFF;
+    z-index: 5;
+}
+
+.mob-side-bar p {
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 30px;
+}
+
+.mob-close {
+    margin-bottom: 50px;
+}
+
+.mob-left-but {
+    position: absolute;
+    left: 5%;
+    width: 40px;
+    height: 40px;
+    background-color: #FFFFFF;
+    border-radius: 50%;
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: -30px;
+    z-index: 3;
+}
+
+.mob-right-but {
+    position: absolute;
+    right: 5%;
+    width: 40px;
+    height: 40px;
+    background-color: #FFFFFF;
+    border-radius: 50%;
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: -30px;
+    z-index: 3;
+}
+
+.mob-left-but img {
+    width: 9px;
+}
+
+.mob-right-but img {
+    width: 9px;
+}
+
+.mob-space {
+    height: 75px;
+}
+
+.mob-slider {
+    width: 100vw;
+    height: 80vw;
+    background-color: #ff7d1a;
+    display: flex;
+    align-items: center;
+    margin-bottom: 25px;
+}
+
+.mob-frame {
+    width: 100vw;
+    height: 80vw;
+    overflow: hidden;
+}
+
+.mob-slide {
+    width: 400vw;
+    height: 80vw;
+    display: flex;
+}
+
+.mob-slide div {
+    width: 100vw;
+    height: 80vw;
+    background-size: cover;
+    background-position-y: center;
+}
+
+.mob-slide1 {
+    background-image: url(images/image-product-1.jpg);
+}
+
+.mob-slide2 {
+    background-image: url(images/image-product-2.jpg);
+}
+
+.mob-slide3 {
+    background-image: url(images/image-product-3.jpg);
+}
+
+.mob-slide4 {
+    background-image: url(images/image-product-4.jpg);
+}
+
+.mob-infos {
+    width: 100vw;
+    padding: 0 25px;
+}
+
+.mob-company {
+    color: hsl(26, 100%, 55%);
+    font-size: 14px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    margin-bottom: 30px;
+}
+
+.mobile h1 {
+    font-size: 30px;
+    margin-bottom: 25px;
+    line-height: 0.99;
+}
+
+.mob-info {
+    color: hsl(219, 9%, 45%);
+    font-size: 14px;
+    letter-spacing: 1px;
+    line-height: 1.8;
+    margin-bottom: 35px;
+}
+
+.mob-prices-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 25px;
+}
+
+.mob-prices {
+    display: flex;
+    align-items: center;
+}
+
+.mob-the-price {
+    font-size: 28px;
+    margin-right: 20px;
+}
+
+.mob-discount {
+    font-size: 16px;
+    font-weight: 700;
+    color: hsl(26, 100%, 55%);
+    background-color: hsl(25, 100%, 94%);
+    padding: 5px;
+    border-radius: 10%;
+}
+
+.mob-old-price {
+    font-size: 21px;
+    font-weight: 700;
+    color: hsl(220, 14%, 75%);
+    text-decoration: underline;
+    text-underline-offset: -35%;
+    text-decoration-skip-ink: none;
+}
+
+.mob-buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 15px;
+}
+
+.mob-count {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: hsl(223, 64%, 98%);
+    border-radius: 10px;
+    padding: 10px;
+    margin-bottom: 15px;
+}
+
+.mob-minus {
+    font-size: 32px;
+    font-weight: 700;
+    color: hsl(26, 100%, 55%);
+}
+
+.mob-minus:hover {
+    cursor: pointer;
+}
+
+.mob-plus {
+    font-size: 32px;
+    font-weight: 700;
+    color: hsl(26, 100%, 55%);
+}
+
+.mob-plus:hover {
+    cursor: pointer;
+}
+
+.mob-number {
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.mob-add {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: hsl(26, 100%, 55%);
+    padding: 15px;
+    border-radius: 15px;
+    box-shadow: 0 35px 60px -30px hsl(26, 100%, 55%);
+}
+
+.mob-add:hover {
+    cursor: pointer;
+}
+
+.mob-shopping-cart {
+    margin-right: 20px;
+}
+
+.mob-add-to-cart {
+    color: #FFFFFF;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+
